--- a/Gamehub.Server/appsettings.json
+++ b/Gamehub.Server/appsettings.json
@@ -1,6 +1,10 @@
 //mongodb+srv://alexandrearribamar:<password>@cluster0.fshufjw.mongodb.net/?retryWrites=true&w=majority
 
 {
+  "jwt": {
+    "secretKey": "7bc8K6usJMzetZJk"
+  },
+
   "DevNetStoreDatabase": {
     "ConnectionString": "mongodb+srv://alexandrearribamar:xf1JW9qWqlgICYRO@cluster0.fshufjw.mongodb.net/?retryWrites=true&w=majority",
     "DatabaseName": "GameHub",
