Continuando a implementação do JWT para a validação do usuário

--- a/Gamehub.Server/appsettings.json
+++ b/Gamehub.Server/appsettings.json
@@ -2,7 +2,7 @@
 
 {
   "jwt": {
-    "secretKey": "7bc8K6usJMzetZJk"
+    "secretKey": "7bc8K6usJMzetZJk12345678901234567890"
   },
 
   "DevNetStoreDatabase": {
