Criando o modelo próprio de 'games', para buscar as imagens e os generos dos jogos

--- a/Gamehub.Server/Gamehub.Server.csproj
+++ b/Gamehub.Server/Gamehub.Server.csproj
@@ -11,6 +11,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\Game.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="IGDB" Version="5.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
